# libsign

./: .gitignore  CMakeLists.txt  README.markdown  libsign-config-version.cmake.in  libsign-config.cmake.in
cmake/modules/: FindGMP.cmake  FindNettle.cmake  Findnettle.cmake
src/: CMakeLists.txt  armor.c  armor.h  mpi.c  mpi.h  packet.c  packet.h  pgp.c  pgp.h  public_key.c  public_key.h  rsa.c  rsa.h  sha1.c  sha1.h  signature.c  signature.h  verify.c  verify.h
tests/: CMakeLists.txt  test-parse-pubkey-buffer.c  test-parse-pubkey.c  test-parse-signature-buffer.c  test-parse-signature.c  test-sign.c  test-verify-with-armor.c  test-verify.c
tests/files/: pubkey.asc  pubkey.key  vmImage  vmImage.asc  vmImage.sig
